<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/root"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <!-- Map Fragment embedded with the map object -->
        <fragment
            android:id="@+id/mapfragment"
            class="com.here.android.mpa.mapping.MapFragment"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />

        <Button
            android:id="@+id/btn_nearby_places"
            android:layout_width="150dp"
            android:layout_height="45dp"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="15dp"
            android:background="@drawable/button_nearby"
            android:drawableLeft="@mipmap/maplings_button_dots"
            android:paddingLeft="30dp"
            android:paddingRight="30dp"
            android:text="@string/nearby"
            android:textColor="@android:color/black" />

        <ImageButton
            android:id="@+id/ibtn_locate_me"
            android:layout_width="45dp"
            android:layout_height="45dp"
            android:layout_alignBottom="@+id/btn_nearby_places"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_marginLeft="12dp"
            android:layout_marginStart="12dp"
            android:src="@null"
            android:background="@drawable/button_locate_me"/>
    </RelativeLayout>


</LinearLayout>
